# ndimixer

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  config.example.toml  config.toml
monitor/: NDIMixerMonitor.swift  build.sh
src/: browser.rs  channel.rs  compositor.rs  config.rs  gpu_compositor.rs  gpu_context.rs  main.rs  ndi_input.rs  ndi_output.rs  status.rs
src/shaders/: blend.wgsl
src/shaders/filters/: chromatic_aberration.wgsl  color_adjust.wgsl  drop_shadow.wgsl  scanlines.wgsl  vignette.wgsl
