[package]
name = "ndimixer"
version = "0.1.0"
edition = "2021"
description = "Headless NDI mixer with HTML overlay support"
license = "MIT"
repository = "https://github.com/ktamas77/ndimixer"

[dependencies]
tokio = { version = "1", features = ["full"] }
grafton-ndi = { version = "0.11", features = ["tokio"] }
chromiumoxide = { version = "0.8", default-features = false, features = ["tokio-runtime", "bytes"] }
image = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
axum = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
futures = "0.3"
tokio-util = { version = "0.7", features = ["rt"] }
